<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.carpool.driver.Driver_Create_Ride">

    <TextView
        android:id="@+id/Passenger_Num_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seats_availability"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="328dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:text="@string/add_your_ride_here"
        android:textAlignment="center"
        android:textColor="@color/purple_main_color"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="16dp" />


    <EditText
        android:id="@+id/departure_time_driver"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/departure_time"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="187dp" />

    <SeekBar
        android:id="@+id/cost_per_passenger"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_per_passenger"
        android:max="10"
        app:textAboveThumbsColor="@color/purple_main_color"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="291dp" />

    <EditText
        android:id="@+id/ride_expires_at"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:hint="@string/ride_expires_at"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="418dp" />

    <TextView
        android:id="@+id/cost_per_passenger_updating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_jd"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="252dp" />

    <TextView
        android:id="@+id/Passenger_Num"
        android:layout_width="58dp"
        android:layout_height="24dp"
        android:text="@string/_0_seat"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="328dp" />

    <ProgressBar
        android:id="@+id/progress_bar_for_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="336dp"
        tools:layout_editor_absoluteY="243dp" />

    <EditText
        android:id="@+id/add_date_time"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_a_date"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_per_passenger"
        android:textSize="18dp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="252dp" />

    <Button
        android:id="@+id/submit_ride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_your_ride"
        android:textAlignment="center"
        android:textSize="14dp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="612dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/purple_main_color_variant"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation"
        tools:layout_editor_absoluteY="691dp" />

    <SeekBar
        android:id="@+id/seekBar_Num_Of_Passenger"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="351dp"
        android:layout_height="42dp"
        android:max="4"
        android:progress="0"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/user_car_notFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="If you have a car , add your car in profile page.  "
        android:textColor="@color/sonic_silver"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="75dp" />

    <Button
        android:id="@+id/location_showMap_Btn"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:text="Select your destination"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="547dp" />

    <EditText
        android:id="@+id/route_description"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Add your route Description"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="479dp" />

</androidx.constraintlayout.widget.ConstraintLayout>