<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/addcar_main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/add_car"
        android:textColor="@color/purple_main_color_variant"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addcar_carmodel_container"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:hint="@string/car_model"
        app:boxBackgroundColor="#FAFAFA"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_main_color"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcar_main_label"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
        app:startIconTint="@color/purple_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addcar_carmodel_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addcar_carseatnumber_container"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/seats_number"
        app:boxBackgroundColor="#FAFAFA"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_main_color"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcar_carmodel_container"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
        app:startIconTint="@color/purple_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addcar_carseatnumber_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addcar_addimg_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcar_carseatnumber_container" />

    <Button
        android:id="@+id/addcar_add_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow_main_color"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcar_addimg_btn" />

    <Button
        android:id="@+id/cancel_carDialog_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#CD5555"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcar_add_btn"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>