<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:background="@color/yellow_main_color"
    android:backgroundTint="@color/white_main_color"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="30dp"
    android:textAlignment="center">

    <Button
        android:id="@+id/edit_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/yellow_main_color"
        android:text="@string/cancel"
        android:textColor="@color/black_main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_container"
        app:layout_constraintVertical_bias="0.067" />

    <!--    <Button-->
    <!--        android:id="@+id/re_send_btn"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginLeft="5dp"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:backgroundTint="@color/yellow_main_color"-->
    <!--        android:text="@string/resend"-->
    <!--        android:textColor="@color/black_main_color"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/confirm_code_container"-->
    <!--        app:layout_constraintVertical_bias="0.07" />-->

    <TextView
        android:id="@+id/confirm_text_lable"
        android:layout_width="343dp"
        android:layout_height="41dp"
        android:layout_marginTop="44dp"
        android:text="@string/within_30_sec_you_will_receive_an_email_contaning_confirmation_code_please_fill_it_in"
        android:textAlignment="center"
        android:textColor="@color/black_main_color"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_container"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="64dp"
        android:hint="@string/insert_code_here"
        app:boxBackgroundColor="@color/white_main_color"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/purple_main_color"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_text_lable"
        app:startIconDrawable="@android:drawable/ic_lock_lock"
        app:startIconTint="@color/purple_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="115dp"
        android:backgroundTint="@color/yellow_main_color"
        android:text="@string/confirm"
        android:textColor="@color/black_main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_container"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/cofirm_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF2626"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_text_lable"
        app:layout_constraintVertical_bias="0.511" />

</androidx.constraintlayout.widget.ConstraintLayout>